assets/assets/css/landing.scss
@import "variables";

#intro {
	// background: linear-gradient(to right bottom,#f7f5fb 50%,#fff 50%);

	// background-color: $scratch-orange;
	// color: white;

	height: calc(100vh - var(--navbar-height));

	.carousel {

		.carousel-item-wrapper {
			> * {
				max-height: 100%;
				max-width: 100%;
				box-shadow: 0px 0px 1rem 0px rgba(0,0,0,0.5);
			}
		}

		.carousel-caption {
			background-color: black;
			box-shadow: 0px 0px 5px black;
			border-radius: 0.25rem;
			opacity: 0;
			transition: opacity .15s linear
		}

		&:hover .carousel-caption {
			opacity: 0.9;
		}

	}
	
	#intro-info {
		display: flex;
		flex-direction: column;
		justify-content: center;

	}

	#install-intro {
		
		&:not(:focus) {
			box-shadow: 0 0 0.5rem 0 rgba(0,0,0,0.75);
		}
		
		p {
			margin-bottom: 0;

			&:nth-of-type(1) {
				font-size: 1.5rem
			}
			&:nth-of-type(2) {
				font-size: 0.75rem
			}

		}

	}

	#read-more {
		background-color: transparent;
		color: var(--intro-heading-cnt);
		border-color: transparent !important;
		box-shadow: none !important;

		:hover {
			color: #e2e6ea;
		}
	}
	
}

#divider-1, #divider-2, #divider-3 {
	height: 100px;

	path {
		fill: var(--intro-heading-bg);
		stroke: var(--intro-heading-bg);
	}
}

#highlights {

	background-color: var(--intro-heading-bg);
	color: var(--intro-heading-cnt);	

	.card {
		color: var(--content-cnt)
	}
	
	.highlights-addon {
		display: flex;
	}

	.highlights-img {
		height: 200px;

		img {
			height: 100%;
		}
	}

	.highlights-info {
		display: flex;
		flex-direction: column;
		justify-content: center;
		flex: 1 0 0;

		h3 {
			margin-bottom: 0.5rem
		}

		p {
			margin-bottom: 0
		}
	}

}

#features {
	
	.features-icon {
		text-align: center;
	}
	
	.features-circle {
		display: flex;
		justify-content: center;
		align-items: center;
		height: 9rem;
		width: 9rem;
		margin: auto;
		background: $scratch-orange;
		color: white;
		border-radius: 50%;
	}

	.features-icon .iconify {
		height: 4.5rem;
		width: 4.5rem;
		margin: auto;
		text-align: center
	}
	
	p {
		margin: 0 0 0.5rem
	}
	
}

#install {
	
	.btn {
		font-size: 1.25rem;
	}

}

main {
	// padding-top: 0;

	section {
		// margin-bottom: 2.5rem
	}
}

h2 {
	margin-bottom: 1rem
}

.image-placeholder {
	display: block;
	height: 200px;
	width: 200px;
	border: 2px black dashed
}

.odometer {
	font-family: inherit !important;
}

body.dark {

	#features {

		.features-circle {
			background-color: $dark-dp-1;
		}

	}

}

body.dark.extension-styled {

	#features {

		.features-circle {
			background-color: $dark-ext-level-2;
		}

	}

}

